Add nullability contract with validation